--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
    <!-- Other Routines -->
    <script type="text/javascript" src="scripts/utils.js"></script>
-   <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>
+<!--  <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>-->
 </head>
 
 <body onload="hostInit();">
@@ -85,7 +85,7 @@
 
    <div id="divStatus" style="margin-left:4px; width:825px; height:50px; float:left;">
       <div id="status" style="height:25px;">
-	  
+	  Status
 	  </div>
 	  <div id="date" style="height:25px;">
 	  
