--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
    <div id="divStatus" style="margin-left:4px; width:825px; height:50px; float:left;">
       <div id="status" style="height:25px;">
-	  Status
+	  
 	  </div>
-	  <div id="date" style="height:25px;">
+	  <div id="date" style="height:25px; text-align: right;">
 	  
 	  </div>
    </div>
