--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
    <!-- Other Routines -->
    <script type="text/javascript" src="scripts/utils.js"></script>
-<!--  <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>-->
+   <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>
 </head>
 
 <body onload="hostInit();">
@@ -62,7 +62,7 @@
              tabindex="2"
              onclick="hostBtnReset_click(this);">
    </div>
-
+<!--Admittedly, my page changes looked nice on my computer, though I am admittedly worried it will look skewed on another machine. I guess we shall see, and I hope it does not affect it too much. -->
    <div id="divConsole" style="margin:4px; width:500px; height:466px; float:left;">
       <canvas id="display"
               width="825px"
