--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	  
 	  </div>
 	  <div id="date" style="height:25px; text-align: right;">
-	  
+<!-- spacing may seem weird, but it is actually proper. -->	  
 	  </div>
    </div>
    
