--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </label>
    </div>
 
-   <div id="divStatus" style="margin-left:4px; width:825px; height:50px; float:left;">
+   <div id="divStatus" style="margin-left:4px; width:825px; height:50px; float:left;" align="left">
       <div id="status" style="height:25px;">
 	  
 	  </div>
