--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
              onclick="hostBtnReset_click(this);">
    </div>
 <!--Admittedly, my page changes looked nice on my computer, though I am admittedly worried it will look skewed on another machine. I guess we shall see, and I hope it does not affect it too much. -->
-   <div id="divConsole" style="margin:4px; width:825px; height:466px; float:left;">
+   <div id="divConsole" style="margin:4px; width:825px; height:466px; float:left; position:absolute:left:20px;top:20px;">
       <canvas id="display"
               width="825px"
               height="400px"
@@ -83,7 +83,7 @@
       </label>
    </div>
 
-   <div id="divStatus" style="margin-left:4px; width:825px; height:50px; float:left;">
+   <div id="divStatus" style="margin-left:4px; width:825px; height:50px; float:left; position:absolute:left:20px;top:766px;">
       <div id="status" style="height:25px;">
 	  
 	  </div>
