--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </canvas>
    </div>
    
-   <div id="divLog" style="margin-left:200px;" align="right">
+   <div id="divLog" style="margin-left:200px; position:absolute;top:20px;right:0px;" align="right">
       <label>
          Log
          <br>
@@ -83,7 +83,7 @@
       </label>
    </div>
 
-   <div id="divStatus" style="margin-left:4px; width:825px; height:50px; float:left;" align="left">
+   <div id="divStatus" style="margin-left:4px; width:825px; height:50px; float:left; position:absolute;top:510px;">
       <div id="status" style="height:25px;">
 	  
 	  </div>
@@ -92,7 +92,7 @@
 	  </div>
    </div>
    
-   <div id="divUserProgramInput" style="margin-left:520px;" align="right">
+   <div id="divUserProgramInput" style="margin-left:200px; position:absolute;top:490px;right:0px;" align="right">
       <label>
          User Program Input
          <br>
@@ -106,7 +106,7 @@
    
 </div>
 
-<p class="footerText" style="clear:both;">
+<p class="footerText" style="clear:both; position:fixed;bottom:0px; width:100%;">
    <br>
    Copyright &copy; 2008 - 2013 No Rights Reserved.
    <br>
