--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	  </div>
    </div>
    
-   <div id="divUserProgramInput" style="margin-left:200px; position:absolute;top:490px;right:0px;" align="right">
+   <div id="divUserProgramInput" style="margin-left:200px; margin-top:0px; position:absolute;top:490px;right:0px; float:right;" align="right">
       <label>
          User Program Input
          <br>
