--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	  </div>
    </div>
    
-   <div id="divUserProgramInput" style="margin-left:200px; position:absolute;top:490px;right:0px;" align="right">
+   <div id="divUserProgramInput" style="margin-left:200px; margin-top:0px; position:absolute;top:490px;right:0px; float:right;" align="right">
       <label>
          User Program Input
          <br>
@@ -106,7 +106,7 @@
    
 </div>
 
-<p class="footerText" style="clear:both; position:fixed;bottom:0px; width:100%;">
+<p class="footerText" style="clear:both; margin-top:10px; position:fixed;bottom:0px; width:100%;">
    <br>
    Copyright &copy; 2008 - 2013 No Rights Reserved.
    <br>
