--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
              tabindex="2"
              onclick="hostBtnReset_click(this);">
    </div>
-<!--Admittedly, my page changes looked nice on my computer, though I am admittedly worried it will look skewed on another machine. I guess we shall see, and I hope it does not affect it too much. -->
-   <div id="divConsole" style="margin:4px; width:825px; height:466px; float:left;">
+<!--Perfect on 14 inch screens or larger (at full screen)-->
+   <div id="divConsole" style="margin:4px; width:700px; height:466px; float:left;">
       <canvas id="display"
-              width="825px"
+              width="700px"
               height="400px"
               tabindex="3">
       </canvas>
@@ -83,11 +83,11 @@
       </label>
    </div>
 
-   <div id="divStatus" style="margin-left:4px; width:825px; height:50px; float:left; position:absolute;top:510px;">
-      <div id="status" style="height:25px;">
+   <div id="divStatus" style="margin-left:4px; width:700px; height:18px; float:left; position:absolute;top:510px;">
+      <div id="status" style="width:350px; float:left;">
 	  
 	  </div>
-	  <div id="date" style="height:25px; text-align: right;">
+	  <div id="date" style="width:350px; text-align: right; float:right;">
 <!-- spacing may seem weird, but it is actually proper. -->	  
 	  </div>
    </div>
