--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
       CATos - a Javascript OS
    </title>
 
-   <!-- Globals CONSTANTS and _Variables. Must included be first. -->
+   <!-- Globals CONSTANTS and _Variables. Must included be first. (Not sure if intentional wording error or not)-->
    <script type="text/javascript" src="globals.js"></script>	
 
    <!-- Host (Hardware Simulation) Routines -->
    <script type="text/javascript" src="scripts/host/control.js"></script>
    <script type="text/javascript" src="scripts/host/devices.js"></script>
    <script type="text/javascript" src="scripts/host/cpu.js"></script>
+   <script type="text/javascript" src="scripts/host/memoryManipulation.js"></script>
 
    <!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
    <script type="text/javascript" src="scripts/os/interrupt.js"></script>
@@ -36,7 +37,7 @@
 <div id="divMain" style="width: 100%; text-align: left;">
 	<table>
 	<tr>
-	<td>
+	<td colspan="2">
    <div id="divButtonBar" style="margin:4px;">
       <input type="button"
              id = "btnStartOS"
@@ -67,7 +68,7 @@
    </td>
    </tr>
    <tr>
-   <td>
+   <td colspan="2">
    <div id="divStatus" style="margin-left:4px; width:700px; height:18px; float:left;">
       <div id="status" style="width:350px; float:left;">
 	  
@@ -80,7 +81,7 @@
    </tr>
 
    <tr>
-   <td>
+   <td colspan="2">
    <div id="divConsole" style="margin:4px; width:700px; height:466px; float:left;">
       <canvas id="display"
               width="700px"
@@ -91,7 +92,7 @@
    </td>
    
    <td>
-   <div id="divLog" style="margin-left:200px;" align="right">
+   <div id="divLog" style="float:left; margin-left:200px;" align="right">
       <label>
          Log
          <br>
@@ -99,7 +100,7 @@
                    id  ="taLog"
                    rows="26"
                    cols="48"
-				   readonly  <!--perfect name-->
+				   readonly  <!--perfect name for once-->
          ></textarea>
       </label>
    </div>
@@ -110,11 +111,11 @@
    <tr>
    <td>
 
-   <div id="divCPUStatus" style="width:200px; height:75px; float:left; text-align:center; visibility:hidden">
+   <div id="divCPUStatus" style="width:200px; height:75px; float:left; margin-top:-40px; text-align:center;">
    <table border="1" align="center"  bgcolor="white">
    <tr>
    <td colspan="5">
-   CPU STATUS
+   CPU Status
    </td>
    </tr>
    <tr>
@@ -138,40 +139,46 @@
    <tr>
 		<td>
 		<div id="divPC">
-		
+		&nbsp;
 		</div>
 		</td>
 		
 		<td>
 		<div id="divACC">
-		
+		&nbsp;
 		</div>
 		</td>
 		
 		<td>
 		<div id="divXReg">
-		
+		&nbsp;
 		</div>
 		</td>
 		
 		<td>
 		<div id="divYReg">
-		
+		&nbsp;
 		</div>
 		</td>
 		
 		<td>
 		<div id="divZFlag">
-		
+		&nbsp;
 		</div>
 		</td>
    </tr>
    </table>
-   </div>
-   
+   </div>  
    </td>
+   
+   <td align="center">
+   <div id="divMemoryStatus" style="width:500px; text-align:center;">
+   </div>
+   meow
+   </td>
+   
    <td>
-   <div id="divUserProgramInput" style="margin-left:200px; text-align:right;">
+   <div id="divUserProgramInput" style="float:left; margin-left:200px; text-align:right;">
       <label>
          User Program Input
          <br>
