--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                    id  ="taLog"
                    rows="26"
                    cols="48"
-				   readonly  <!--perfect name for once-->
+				   readonly
          ></textarea>
       </label>
    </div>
@@ -174,7 +174,7 @@
    <td align="center">
    <div id="divMemoryStatus" style="width:500px; text-align:center;">
    </div>
-   meow
+   In progress
    </td>
    
    <td>
