--- a/index.html
+++ b/index.html
@@ -173,9 +173,10 @@
    </td>
    
    <td align="center">
-   <div id="divMemoryStatus" style="width:430px; height:120px; text-align:center; overflow:auto;">
+   <div id="divMemoryStatus" style="width:430px; height:120px; text-align:center; ">
    
-   <textarea name="taMemory"
+   <textarea style="width: 420px; height: 120px;"
+				   name="taMemory"
                    id  ="taMemory"
                    rows="98"
                    cols="48"
