--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
    <tr>
    <td>
 
-   <div id="divCPUStatus" style="width:200px; height:75px; float:left; margin-top:-40px; text-align:center;">
+   <div id="divCPUStatus" style="width:240px; height:75px; float:left; margin-top:-40px; text-align:center;">
    <table border="1" align="center"  bgcolor="white">
    <tr>
    <td colspan="5">
@@ -122,19 +122,19 @@
    </tr>
    <tr>
    <td>
-   &nbsp;&nbsp;&nbsp;PC&nbsp;&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;&nbsp;PC&nbsp;&nbsp;&nbsp;&nbsp;
    </td>
    <td>
-   &nbsp;&nbsp;&nbsp;ACC&nbsp;&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;ACC&nbsp;&nbsp;&nbsp;&nbsp;
    </td>
    <td>
-   &nbsp;&nbsp;X&nbsp;&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;&nbsp;X&nbsp;&nbsp;&nbsp;&nbsp;
    </td>
    <td>
-   &nbsp;&nbsp;Y&nbsp;&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;&nbsp;Y&nbsp;&nbsp;&nbsp;&nbsp;
    </td>
    <td>
-   &nbsp;&nbsp;Z&nbsp;&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;&nbsp;Z&nbsp;&nbsp;&nbsp;&nbsp;
    </td>
    </tr>
    
@@ -174,7 +174,7 @@
    </td>
    
    <td align="center">
-   <div id="divMemoryStatus" style="width:430px; height:120px; text-align:center; ">
+   <div id="divMemoryStatus" style="margin-left:40px; width:430px; height:120px; text-align:center; ">
    
    <textarea style="width: 420px; height: 120px;"
 				   name="taMemory"
@@ -203,7 +203,7 @@
    
    <tr>
    <td>
-   <div id="divPCBStatus" style="width:200px; height:75px; float:left; margin-top:-40px; text-align:center;">
+   <div id="divPCBStatus" style="width:240px; height:75px; float:left; margin-top:-40px; text-align:center;">
    <table border="1" align="center" bgcolor="white">
    <tr>
    <td colspan="6">
@@ -215,19 +215,19 @@
    &nbsp;PID&nbsp;
    </td>
    <td>
-   &nbsp;PC&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;PC&nbsp;&nbsp;&nbsp;
    </td>
    <td>
    &nbsp;ACC&nbsp;
    </td>
    <td>
-   &nbsp;&nbsp;X&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;&nbsp;X&nbsp;&nbsp;&nbsp;
    </td>
    <td>
-   &nbsp;&nbsp;Y&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;&nbsp;Y&nbsp;&nbsp;&nbsp;
    </td>
    <td>
-   &nbsp;&nbsp;Z&nbsp;&nbsp;
+   &nbsp;&nbsp;&nbsp;&nbsp;Z&nbsp;&nbsp;&nbsp;
    </td>
    </tr>
 
