--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
    <tr>
    <td>
    <div id="divPCBStatus" style="width:240px; height:75px; float:left; margin-top:-40px; text-align:center;">
-   <table border="1" align="center" bgcolor="white">
+   <table border="1" align="center" bgcolor="white" id="PCBTable">
    <tr>
    <td colspan="6">
    PCB Status
@@ -230,6 +230,7 @@
    &nbsp;&nbsp;&nbsp;&nbsp;Z&nbsp;&nbsp;&nbsp;
    </td>
    </tr>
+
 
    <tr>
 		<td>
