--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
    <div id="divCPUStatus" style="width:240px; height:75px; float:left; margin-top:-40px; text-align:center;">
    <table border="1" align="center"  bgcolor="white">
    <tr>
-   <td colspan="5">
+   <td colspan="5" bgcolor="42B4E6">
    CPU Status
    </td>
    </tr>
@@ -206,7 +206,7 @@
    <div id="divPCBStatus" style="width:240px; height:75px; float:left; margin-top:-40px; text-align:center;">
    <table border="1" align="center" bgcolor="white" id="PCBTable">
    <tr>
-   <td colspan="6">
+   <td colspan="6" bgcolor="42B4E6">
    PCB Status
    </td>
    </tr>
@@ -273,7 +273,41 @@
    </td>
 
    </tr>
-   </table>
+   <tr>
+   <td>
+<div style="text-align:center; width:240px; height:75px; margin-top:25px;">
+	<table border="1" bgcolor="white" id="RQTable"> <!--Who does not love tables (Other than Bob)?-->
+		<tr>
+			<td colspan="4" bgcolor="42B4E6">
+			&nbsp;&nbsp;Ready Queue&nbsp;&nbsp;
+			</td>
+		</tr>
+		<tr>
+			<td>
+			&nbsp;&nbsp;meows&nbsp;&nbsp;
+			</td>
+			<td>
+			&nbsp;&nbsp;meows&nbsp;&nbsp;
+			</td>
+			<td>
+			&nbsp;&nbsp;meow&nbsp;&nbsp;
+			</td>
+			<td>
+			&nbsp;&nbsp;meow&nbsp;&nbsp;
+			</td>
+		</tr>
+		<tr>
+			<td colspan="4">
+				<div id="RQOut">
+				&nbsp;
+				</div>
+			</td>
+		</tr>
+	</table>
+</div>
+</td>
+</tr>
+</table>
 </div>
 <table width="100%">
 <tr>
