--- a/index.html
+++ b/index.html
@@ -278,26 +278,29 @@
 <div style="text-align:center; width:240px; height:75px; margin-top:25px;">
 	<table border="1" bgcolor="white" id="RQTable"> <!--Who does not love tables (Other than Bob)?-->
 		<tr>
-			<td colspan="4" bgcolor="42B4E6">
+			<td colspan="5" bgcolor="42B4E6">
 			&nbsp;&nbsp;Ready Queue&nbsp;&nbsp;
 			</td>
 		</tr>
 		<tr>
 			<td>
-			&nbsp;&nbsp;meows&nbsp;&nbsp;
+			&nbsp;PID&nbsp;
 			</td>
 			<td>
-			&nbsp;&nbsp;meows&nbsp;&nbsp;
+			&nbsp;&nbsp;Base&nbsp;&nbsp;
 			</td>
 			<td>
-			&nbsp;&nbsp;meow&nbsp;&nbsp;
+			&nbsp;&nbsp;Limit&nbsp;&nbsp;
 			</td>
 			<td>
-			&nbsp;&nbsp;meow&nbsp;&nbsp;
+			&nbsp;Block&nbsp;
+			</td>
+			<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;State&nbsp;&nbsp;&nbsp;&nbsp;
 			</td>
 		</tr>
 		<tr>
-			<td colspan="4">
+			<td colspan="5" align=left>
 				<div id="RQOut">
 				&nbsp;
 				</div>
