--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
    <script type="text/javascript" src="scripts/os/shell.js"></script>
    <script type="text/javascript" src="scripts/os/pcb.js"></script>
    <script type="text/javascript" src="scripts/os/memoryManipulation.js"></script>
+   <script type="text/javascript" src="scripts/os/scheduler.js"></script>
    <script type="text/javascript" src="scripts/os/kernel.js"></script>
 
    <!-- Other Routines -->
