--- a/index.html
+++ b/index.html
@@ -326,7 +326,19 @@
    </table>
    </div>  
    </td>
-
+	
+   <td align="right" colspan="7">
+   <div id="divHDDStatus" style="margin-left:50px; width:600px; height:120px; text-align:center; ">
+   
+   <textarea style="width: 600px; height: 120px;"
+				   name="taHDD"
+                   id  ="taHDD"
+                   rows="300"
+                   cols="64"
+				   readonly
+         ></textarea>
+   </div>
+   </td>
    </tr>
 
 
