--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
    
    <tr>
    <td>
-<div style="text-align:center; width:240px; height:75px; margin-top:-50px;">
+<div style="text-align:center; width:240px; height:75px; margin-top:0px;">
 	<table border="1" bgcolor="white" id="RQTable"> <!--Who does not love tables (Other than Bob)?-->
 		<tr>
-			<td colspan="5" bgcolor="42B4E6">
+			<td colspan="6" bgcolor="42B4E6">
 			&nbsp;&nbsp;Ready Queue&nbsp;&nbsp;
 			</td>
 		</tr>
@@ -233,9 +233,12 @@
 			<td>
 			&nbsp;&nbsp;&nbsp;&nbsp;State&nbsp;&nbsp;&nbsp;&nbsp;
 			</td>
+			<td>
+			&nbsp;Location&nbsp;
+			</td>
 		</tr>
 		<tr>
-			<td colspan="5" align=left>
+			<td colspan="6" align=left>
 				<div id="RQOut">
 				&nbsp;
 				</div>
@@ -251,7 +254,7 @@
 
   <tr>
    <td>
-   <div id="divPCBStatus" style="width:240px; height:75px; float:left; margin-top:50px; text-align:center;">
+   <div id="divPCBStatus" style="width:240px; height:75px; float:left; margin-top:75px; text-align:center;">
    <table border="1" align="center" bgcolor="white" id="PCBTable">
    <tr>
    <td colspan="7" bgcolor="42B4E6">
